backport fixes from develop

--- a/config/mastercomfig/cfg/comfig/comfig.cfg
+++ b/config/mastercomfig/cfg/comfig/comfig.cfg
@@ -630,9 +630,9 @@ alias decals_sprays_support_aliases"decals=low;decals_low"
 
 alias decals_off"r_decals 1;mp_decals 1;r_decal_cover_count 10;r_decal_overlap_area 1.1;r_decal_overlap_count 10;r_drawbatchdecals 0;alias decals_sprays_support decals_sprays_support_aliases;alias decals_level echo decals=off"
 alias decals_low"r_decals 9;mp_decals 9;r_decal_cover_count 4;r_decal_overlap_area .4;r_decal_overlap_count 3;r_drawbatchdecals 1;alias decals_sprays_support;alias decals_level echo decals=low"
-alias decals_medium"r_decals 32;mp_decals 32;r_decal_cover_count 4;r_decal_overlap_area .4;r_decal_overlap_count 3;r_drawbatchdecals 1;alias decals_sprays_support;alias decals_level echo decals=decals_medium"
-alias decals_high"r_decals 80;mp_decals 80;r_decal_cover_count 4;r_decal_overlap_area .4;r_decal_overlap_count 3;r_drawbatchdecals 1;alias decals_sprays_support;alias decals_level echo decals=decals_high"
-alias decals_ultra"r_decals 2048;mp_decals 2048;r_decal_cover_count 4;r_decal_overlap_area .4;r_decal_overlap_count 3;r_drawbatchdecals 1;alias decals_sprays_support;alias decals_level echo decals=decals_ultra"
+alias decals_medium"r_decals 32;mp_decals 32;r_decal_cover_count 4;r_decal_overlap_area .4;r_decal_overlap_count 3;r_drawbatchdecals 1;alias decals_sprays_support;alias decals_level echo decals=medium"
+alias decals_high"r_decals 80;mp_decals 80;r_decal_cover_count 4;r_decal_overlap_area .4;r_decal_overlap_count 3;r_drawbatchdecals 1;alias decals_sprays_support;alias decals_level echo decals=high"
+alias decals_ultra"r_decals 2048;mp_decals 2048;r_decal_cover_count 4;r_decal_overlap_area .4;r_decal_overlap_count 3;r_drawbatchdecals 1;alias decals_sprays_support;alias decals_level echo decals=ultra"
 
 alias decals
 
@@ -1605,9 +1605,9 @@ alias sound
 //voice_overdrivefadetime .4 // How long to fade voice overdrive in seconds
 //voice_fadeouttime 0 // Only fade out over two samples, to fix an cutting out issue with long voice streams
 
-alias voice_chat_off"voice_enable 0;voice_modenable 0;cmd VModEnable 0;alias voice_chat_level echo voice_chat=off"
+alias voice_chat_off"voice_enable 0;voice_modenable 0;alias voice_chat_level echo voice_chat=off"
 alias voice_chat_hidden"voice_enable 0;voice_modenable 1;alias voice_chat_level echo voice_chat=hidden"
-alias voice_chat_on"voice_enable 1;voice_modenable 1;cmd VModEnable 1;alias voice_chat_level echo voice_chat=on"
+alias voice_chat_on"voice_enable 1;voice_modenable 1;alias voice_chat_level echo voice_chat=on"
 
 alias voice_chat voice_chat_on
 
