--- a/config/mastercomfig/cfg/comfig/echo.cfg
+++ b/config/mastercomfig/cfg/comfig/echo.cfg
@@ -48,7 +48,7 @@ echo"  ##################################################"
 echo"  This release took 30 hours to produce."
 echo"  If you like the work I do, consider supporting me!"
 echo""
-echo"  docs.mastercomfig.com/page/support_me"
+echo"  docs.comfig.app/page/support_me"
 echo""
 echo"  I accept Ko-fi, Liberapay, and trade offers!"
 echo""
