--- a/config/templates/config/config_template.cfg
+++ b/config/templates/config/config_template.cfg
@@ -6,7 +6,7 @@
 // ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒
 
 // Full mastercomfig console variables list, check out modules too!
-// https://docs.mastercomfig.com/page/customization/modules/
+// https://docs.comfig.app/page/customization/modules/
 
 // Recommended launch options: -novid -nojoy -nosteamcontroller -nohltv -particles 1 -precachefontchars -noquicktime
 
@@ -1284,7 +1284,7 @@ echo"  ##################################################"
 echo"  This release took 30 hours to produce."
 echo"  If you like the work I do, consider supporting me!"
 echo""
-echo"  docs.mastercomfig.com/page/support_me"
+echo"  docs.comfig.app/page/support_me"
 echo""
 echo"  I accept Ko-fi, Liberapay, and trade offers!"
 echo""
