fix naming and add benchmark note

--- a/mkdocs.base.yml
+++ b/mkdocs.base.yml
@@ -1,4 +1,4 @@
-site_name: mastercomfig docs
+site_name: comfig docs
 site_author: mastercoms
 site_url: "https://docs.comfig.app/"
 site_description: A modern customization framework.
