--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -32,7 +32,7 @@ plugins:
             Help: Помощь
             Features: Особенности
             Screenshots: Скриншоты
-            Benchmarks: Тесты
+            Benchmarks: Тестирование
             Contributing: Участие в проекте
             Security: Политика безопасности
             Credits: Благодарности
@@ -51,7 +51,7 @@ plugins:
             Next Steps: Следующие шаги
             Quick Fixes: Быстрые исправления
             Update: Обновление
-            TF2 Documentation: Документация по тф2
+            TF2 Documentation: Документация TF2
             Misconceptions: Заблуждения
             Silly Launch Options: Незначительные Параметры Запуска
             Other Games: Другие игры
